# oca_api

./: .gitignore  Dockerfile  README.md  cluster.yml  docker-compose.yml  mkdocs.yml  oca.yml  ocav1.yml  pyproject.toml  requirements.txt  run.sh  run_local.sh  xolo.yml
db/: dbcluster.yml  mongox  mongox2  mongox3  oca-db-0.conf
db/configs/: mongo1.conf  mongo2.conf  mongo3.conf
db/scripts/: create_user.sh  createkey.sh  init_repset.sh  restart.sh  set_priority.sh
docs/: arch.md  getting-started.md  index.md  migration.md  model.md  model_conceptual.md  v1.md
functions/src/: create_catalogs.py
log/: oca_catalogs  oca_catalogs.2025-07-17_10-48  oca_catalogs.2025-07-17_10-59  oca_catalogs.2025-07-25_08-35  oca_catalogs.2025-07-25_10-03  oca_catalogs.2025-07-25_10-14
ocaapi/: server.py
ocaapi/controllers/: __init__.py  catalogs.py  observatories.py  old.py  products.py
ocaapi/db/: __init__.py
ocaapi/dto/: __init__.py  catalog.py  observatory.py  product.py
ocaapi/errors/: __init__.py
ocaapi/log/: log.py
ocaapi/models/: __init__.py
ocaapi/policy/: __init__.py
ocaapi/querylang/: __init__.py  dto.py  interest.py  parser.py  peg.py  reserved.py  spatial.py  spatial_reserved.py  temporal.py
ocaapi/repositories/: __init__.py  catalog.py  observatory.py  products.py  rating.py
src/: server.py
templates/: index.html
tests/: conftest.py  old.py  pytest.ini  test01.py  test_catalogs.py  test_nameservice.py  test_nameservicev2.py  test_observatories.py  test_observatories_v2.py  test_products.py  test_products_v2.py  test_xvariable.py
(+33 files in other folders)
